# DQAnneal

./: .gitignore  README.md  pyproject.toml
dqanneal/graph/: embed.py  quark_mod.py
dqanneal/solvers/: solvers.py
notebooks/: example.ipynb  example_2_reverse_anneal.ipynb  example_3_graph.ipynb  example_4_opt_embedding.ipynb
